covers fix
added lazy load and alt

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -54,9 +54,9 @@
   font-size: 16px;
   background-color: transparent;
   border: 0;
-  border-bottom: 1px solid rgba(250,250,250,0.2);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.2);
   color: rgb(250, 250, 250);
-  -webkit-box-shadow: inset 0 0 0 50px #1c1d20;
+  box-shadow: inset 0 0 0 50px #1c1d20;
 }
 
 #form-email:hover,
@@ -69,7 +69,7 @@
 }
 
 input.entered-text {
-  border-bottom: 1px solid rgba(250,250,250,0.5);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.5);
 }
 
 input.success {
